[package]
name = "cryptbpf"
version = "0.1.0"
edition = "2024"

[dependencies]
libbpf-rs = "0.24"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
plain = "0.2"
nix = { version = "0.29", features = ["user"] }
sha2 = "0.10"
hex = "0.4"
p256 = { version = "0.13", features = ["ecdsa"] }
rand_core = { version = "0.6", features = ["getrandom"] }

[build-dependencies]
libbpf-cargo = "0.24"

[dev-dependencies]
hex = "0.4"
